:database:entities cleanup